--- a/pom.xml
+++ b/pom.xml
@@ -158,7 +158,6 @@
                         <plugin>all-open</plugin>
                     </compilerPlugins>
                 </configuration>
-
                 <dependencies>
                     <dependency>
                         <groupId>org.jetbrains.kotlin</groupId>
@@ -166,8 +165,6 @@
                         <version>${kotlin.version}</version>
                     </dependency>
                 </dependencies>
-
-
                 <executions>
                     <execution>
                         <id>compile</id>
@@ -184,8 +181,6 @@
                         </goals>
                     </execution>
                 </executions>
-
-
             </plugin>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -193,6 +188,28 @@
                 <configuration>
                     <source>${maven.compiler.source}</source>
                     <target>${maven.compiler.target}</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.2.5</version>
+                <configuration>
+                    <excludes>
+                        <exclude>**/*IntegrationTest.java</exclude>
+                        <exclude>**/*IntegrationTest.kt</exclude>
+                    </excludes>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <version>3.2.5</version>
+                <configuration>
+                    <includes>
+                        <include>**/*IntegrationTest.java</include>
+                        <include>**/*IntegrationTest.kt</include>
+                    </includes>
                 </configuration>
             </plugin>
         </plugins>
