feature(cb-0010): integrate Gemini AI and improve multi-provider support
- Add `AiProvider` enum for flexible AI provider handling.
- Introduce `CandidateMatchingService` with Gemini and OpenAI support.
- Update configuration for Gemini integration via `application.yaml`.
- Enhance `FlowcaseHttpClient` to fetch complete CV data.
- Add tests for multi-provider candidate matching scenarios.
- Replace `OpenAIService` with generalized AI service architecture.

--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,11 @@
             <artifactId>google-genai</artifactId>
             <version>1.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>32.1.3-jre</version>
+        </dependency>
 
 
         <!-- Kotlin stdlib -->
