--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -5,7 +5,6 @@ openai:
   api-key: ${OPENAI_API-KEY}
   model: gpt-4
   assistant-id: ${OPENAI_ASSISTANT-ID}
-gemini:
-  api-key: ${GEMINI_API-KEY}
-  model: gemini-2.0-flash
-  
+google:
+  api-key: ${GOOGLE_API_KEY}
+  model: gemini-1.5-pro-latest
