--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -5,6 +5,6 @@ openai:
   api-key: ${OPENAI_API-KEY}
   model: gpt-4
   assistant-id: ${OPENAI_ASSISTANT-ID}
-google:
-  api-key: ${GOOGLE_API_KEY}
-  model: gemini-1.5-pro-latest
+gemini:
+    api-key: ${GEMINI_API_KEY}
+    model: gemini-2.5-pro-latest
