--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -23,17 +23,15 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
-    - name: Set up JDK 17
-      uses: actions/setup-java@v4
-      with:
-        java-version: '17'
-        distribution: 'temurin'
-        cache: maven
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml
-
-    # ... (resten av din maven.yml-fil) ...
+      - uses: actions/checkout@v4
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+          cache: maven
+      - name: Build with Maven
+        run: mvn -B package --file pom.xml
 
   code-review:
     needs: build
@@ -61,35 +59,30 @@ jobs:
             echo 'EOF'
           } >> "$GITHUB_OUTPUT"
 
-          - name: Call Gemini for review and prepare comment
-              id: review
-              env:
-                DIFF_CONTENT: ${{ steps.diff.outputs.diff_content }}
-                GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
-              run: |
-                PROMPT_TEXT="Du er en ekspert på programvareutvikling [...]. Her er kodeendringene:\n\n\`\`\`diff\n$DIFF_CONTENT\n\`\`\`"
-                JSON_PAYLOAD=$(jq -n --arg content "$PROMPT_TEXT" '{ "contents": [ { "parts": [ { "text": $content } ] } ] }')
-                
-                curl -s -X POST "https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash-latest:generateContent?key=$GEMINI_API_KEY" \
-                  -H "Content-Type: application/json" \
-                  -d "$JSON_PAYLOAD" > gemini_response.json
-                
-                echo "--- Raw Gemini Response ---"
-                cat gemini_response.json
-                echo "---------------------------"
-                
-                # Hent ut kommentaren. Hvis den ikke finnes, returner en tom streng ""
-                REVIEW_COMMENT=$(jq -r '.candidates[0].content.parts[0].text // ""' gemini_response.json)
-                
-                # Sjekk om resultatet er tomt
-                if [[ -z "$REVIEW_COMMENT" ]]; then
-                  echo "::error::Klarte ikke å hente ut en gyldig kommentar fra Gemini-responsen."
-                  jq . gemini_response.json
-                  exit 1
-                fi
-                
-                {
-                  echo 'comment<<EOF'
-                  echo "$REVIEW_COMMENT"
-                  echo 'EOF'
-                } >> "$GITHUB_OUTPUT"
+      - name: Call Gemini for review and prepare comment
+        id: review
+        env:
+          DIFF_CONTENT: ${{ steps.diff.outputs.diff_content }}
+          GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
+        run: |
+          PROMPT_TEXT="Du er en ekspert på programvareutvikling [...]. Her er kodeendringene:\n\n\`\`\`diff\n$DIFF_CONTENT\n\`\`\`"
+          JSON_PAYLOAD=$(jq -n --arg content "$PROMPT_TEXT" '{ "contents": [ { "parts": [ { "text": $content } ] } ] }')
+          curl -s -X POST "https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash-latest:generateContent?key=$GEMINI_API_KEY" \
+            -H "Content-Type: application/json" \
+            -d "$JSON_PAYLOAD" > gemini_response.json
+          if ! jq . gemini_response.json > /dev/null 2>&1; then
+            echo "::error::Ugyldig JSON fra Gemini API"
+            cat gemini_response.json
+            exit 1
+          fi
+          REVIEW_COMMENT=$(jq -r '.candidates[0].content.parts[0].text // ""' gemini_response.json)
+          if [[ -z "$REVIEW_COMMENT" ]]; then
+            echo "::error::Klarte ikke å hente ut en gyldig kommentar fra Gemini-responsen."
+            cat gemini_response.json
+            exit 1
+          fi
+          {
+            echo 'comment<<EOF'
+            echo "$REVIEW_COMMENT"
+            echo 'EOF'
+          } >> "$GITHUB_OUTPUT"
