--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,35 +1,27 @@
-# This workflow will build a Java project with Maven, and cache/restore any dependencies to improve the workflow execution time
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-maven
-
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
 name: Java CI with Maven
 
 on:
   push:
-    # This includes 'main', all 'feature/*' branches, and any other branch you create.
-    branches: [ "**" ]
+    branches: [main]
   pull_request:
-    # Run the workflow when a pull request is opened or updated
-    # that targets the 'main' branch, acting as a quality check before merging.
-    branches: [ "main" ]
+    branches: [main]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
       - name: Set up JDK 17
-        uses: actions/setup-java@v4
+        uses: actions/setup-java@v3
         with:
           java-version: '17'
           distribution: 'temurin'
           cache: maven
+
       - name: Build with Maven
         run: mvn -B package --file pom.xml
 
@@ -59,14 +51,26 @@ jobs:
             echo 'EOF'
           } >> "$GITHUB_OUTPUT"
 
+      - name: Read PR Review Prompt
+        id: prompt
+        run: |
+          PROMPT_TEXT=$(cat .github/prompts/pr_review_prompt.txt)
+          {
+            echo 'prompt_content<<EOF'
+            echo "$PROMPT_TEXT"
+            echo 'EOF'
+          } >> "$GITHUB_OUTPUT"
+
       - name: Call Gemini for review and prepare comment
         id: review
         env:
           DIFF_CONTENT: ${{ steps.diff.outputs.diff_content }}
           GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
+          PROMPT_CONTENT: ${{ steps.prompt.outputs.prompt_content }}
         run: |
-          PROMPT_TEXT="Du er en ekspert på programvareutvikling [...]. Her er kodeendringene:\n\n\`\`\`diff\n$DIFF_CONTENT\n\`\`\`"
-          JSON_PAYLOAD=$(jq -n --arg content "$PROMPT_TEXT" '{ "contents": [ { "parts": [ { "text": $content } ] } ] }')
+          # Replace {diff} in the prompt file with the actual PR diff
+          FINAL_PROMPT=$(echo "$PROMPT_CONTENT" | sed "s|{diff}|\\\`\`\`diff\\\n$DIFF_CONTENT\\\n\\\`\`\`|g")
+          JSON_PAYLOAD=$(jq -n --arg content "$FINAL_PROMPT" '{ "contents": [ { "parts": [ { "text": $content } ] } ] }')
           curl -s -X POST "https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash-latest:generateContent?key=$GEMINI_API_KEY" \
             -H "Content-Type: application/json" \
             -d "$JSON_PAYLOAD" > gemini_response.json
