--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,20 +1,26 @@
-# This workflow will build a Java project with Maven, and cache/restore any dependencies to improve the workflow execution time
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-maven
+# .github/workflows/maven.yml
 
-name: Java CI with Maven
+name: Java CI with Maven and Gemini PR Review
 
 on:
-  push:
-    branches: [ "**" ]
   pull_request:
+    # Kjører kun når en pull request mot main opprettes eller oppdateres
     branches: [ "main" ]
 
 jobs:
-  build:
+  build_and_review:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read # Nødvendig for å kunne sjekke ut kode
+      pull-requests: write # Nødvendig for å kunne kommentere på en PR
 
     steps:
-      - uses: actions/checkout@v4
+      # --- Steg 1: Kode-oppsett ---
+      - name: Checkout code
+        uses: actions/checkout@v4
+        # Vi henter hele historikken for å kunne sammenligne branches
+        with:
+          fetch-depth: 0
 
       - name: Set up JDK 17
         uses: actions/setup-java@v4
@@ -23,41 +29,72 @@ jobs:
           distribution: 'temurin'
           cache: maven
 
+      # --- Steg 2: Bygg og test ---
       - name: Build with Maven
         run: mvn -B package --file pom.xml
 
-
-      - name: Call Gemini API and Parse Response
-        env:
-          GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
-          JSON_PAYLOAD: ${{ secrets.JSON_PAYLOAD }}
+      # --- Steg 3: Forbered data for AI-analyse ---
+      - name: Read PR Review Prompt
+        id: prompt_reader
         run: |
-          # Debug: Print payload before sending
-          echo "JSON payload:"
-          echo "$JSON_PAYLOAD"
+          # Leser innholdet fra prompt-filen og fjerner linjeskift for sikker håndtering
+          PROMPT_CONTENT=$(tr -s '\n' ' ' < .github/prompts/pr_review_prompt.txt)
+          echo "prompt_content=$PROMPT_CONTENT" >> $GITHUB_OUTPUT
 
-          curl -s -X POST "https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash-latest:generateContent?key=$GEMINI_API_KEY" \
-            -H "Content-Type: application/json" \
-            -d "$JSON_PAYLOAD" > gemini_response.json
+      - name: Get code changes (diff)
+        id: git_diff
+        run: |
+          # Henter endringene (diff) mellom feature-branchen og main-branchen
+          # Dette er essensielt for å gi kontekst til AI-en
+          DIFF_CONTENT=$(git diff origin/main...HEAD)
+          # Vi må "escape" spesialtegn i diff-en for å kunne bruke den i JSON
+          ESCAPED_DIFF=$(echo "$DIFF_CONTENT" | jq -R -s '.')
+          echo "diff_content=$ESCAPED_DIFF" >> $GITHUB_OUTPUT
 
-          # Debug: Print response after request
-          echo "Gemini API response:"
-          cat gemini_response.json
+      # --- Steg 4: Kall Gemini API for kode-review ---
+      - name: Perform Code Review with Gemini
+        if: ${{ success() }} # Kjør kun hvis bygget var vellykket
+        env:
+          GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }} # Bruk secret for API-nøkkel
+        run: |
+          # Kombinerer prompten med kodeendringene
+          FULL_PROMPT="${{ steps.prompt_reader.outputs.prompt_content }}
 
-          if ! jq . gemini_response.json > /dev/null 2>&1; then
-            echo "::error::Ugyldig JSON fra Gemini API"
-            cat gemini_response.json
-            exit 1
-          fi
+          Her er kodeendringene som skal vurderes:
+          ${{ steps.git_diff.outputs.diff_content }}"
 
-          REVIEW_COMMENT=$(jq -r '.candidates[0].content.parts[0].text // ""' gemini_response.json)
-          if [[ -z "$REVIEW_COMMENT" ]]; then
-            echo "::error::Klarte ikke å hente ut en gyldig kommentar fra Gemini-responsen."
-            cat gemini_response.json
-            exit 1
-          fi
+          # Bygger JSON-payload for Gemini API-et
+          JSON_PAYLOAD=$(cat <<EOF
+          {
+            "contents": [{
+              "parts": [{
+                "text": "$FULL_PROMPT"
+              }]
+            }]
+          }
+          EOF
+          )
 
-      # Add here any Perl commands needed, but DO NOT use unsupported regex modifiers like /r or /t
-      # Example:
-      # - name: Safe Perl Replacement Example
-      #   run: perl -pe 's/old/new/g' input.txt > output.txt
+          # Kaller Gemini API med curl
+          GEMINI_RESPONSE=$(curl -s -X POST "https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash-latest:generateContent?key=$GEMINI_API_KEY" \
+               -H "Content-Type: application/json" \
+               -d "$JSON_PAYLOAD")
+
+          # Henter ut teksten fra responsen med jq og lagrer til fil for neste steg
+          echo "$GEMINI_RESPONSE" | jq -r '.candidates[0].content.parts[0].text' > gemini_review.txt
+          echo "Gemini-review lagret i gemini_review.txt"
+
+      # --- Steg 5: Publiser review som en kommentar på Pull Requesten ---
+      - name: Comment on Pull Request
+        if: ${{ success() && github.event_name == 'pull_request' }}
+        uses: actions/github-script@v6
+        with:
+          script: |
+            const fs = require('fs');
+            const review = fs.readFileSync('gemini_review.txt', 'utf8');
+            github.rest.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: `### 🤖 Gemini Code Review\n\n${review}`
+            });
