--- a/pom.xml
+++ b/pom.xml
@@ -147,6 +147,10 @@
             <version>5.10.0</version> <!-- Or latest -->
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
 
     </dependencies>
 
