feature(cb-0011): enhance Flowcase integration, implement domain events, and refine candidate matching logic

--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>no.cloudberries</groupId>
     <artifactId>candidate-matcher</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0.0</version>
     <name>Cloudberries Candidate Matcher</name>
 
     <properties>
@@ -33,11 +33,17 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
-        
+        <!-- If you want to use kotlin-logging -->
+        <dependency>
+            <groupId>io.github.microutils</groupId>
+            <artifactId>kotlin-logging-jvm</artifactId>
+            <version>3.0.5</version>
+        </dependency>
         <dependency>
             <groupId>com.google.genai</groupId>
             <artifactId>google-genai</artifactId>
@@ -150,8 +156,6 @@
             <version>5.10.0</version> <!-- Or latest -->
             <scope>test</scope>
         </dependency>
-
-
     </dependencies>
 
     <build>
