--- a/pom.xml
+++ b/pom.xml
@@ -90,7 +90,6 @@
         <dependency>
             <groupId>org.liquibase</groupId>
             <artifactId>liquibase-core</artifactId>
-
         </dependency>
 
         <!-- HTTP Client -->
@@ -129,6 +128,14 @@
             <version>3.7.0</version>
         </dependency>
 
+
+        <!-- Logging (optional) -->
+
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-core</artifactId>
+        </dependency>
+
         <!-- Test-støtte -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -143,12 +150,6 @@
             <scope>test</scope>
         </dependency>
 
-        <!-- Logging (optional) -->
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-simple</artifactId>
-            <version>2.0.9</version>
-        </dependency>
         <!-- Test libs -->
 
         <!-- Zonky Embedded Postgres -->
