--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <name>Cloudberries Candidate Matcher</name>
 
     <properties>
-        <kotlin.version>1.9.21</kotlin.version>
+        <kotlin.version>2.2.0</kotlin.version>
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
         <javacv.version>1.5.10</javacv.version>
@@ -21,6 +21,13 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-dependencies</artifactId>
                 <version>3.3.3</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>com.squareup.okhttp3</groupId>
+                <artifactId>okhttp-bom</artifactId>
+                <version>5.0.0-alpha.13</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -95,7 +102,19 @@
         <!-- HTTP Client -->
         <dependency>
             <groupId>com.squareup.okhttp3</groupId>
-            <artifactId>okhttp</artifactId>
+            <artifactId>okhttp-jvm</artifactId>
+            <!-- Remove after OkHttp 5.3.0 with updated BOM. -->
+            <version>5.1.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>mockwebserver3</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>logging-interceptor</artifactId>
         </dependency>
 
         <!-- PDF Parsing -->
