feature(cb-0043): add automated notification service with logging, scheduling, and deadline reminders. Notification feature implemented

--- a/src/main/resources/application-local.yaml
+++ b/src/main/resources/application-local.yaml
@@ -38,7 +38,7 @@ spring:
     open-in-view: false
   sql:
     init:
-      schema-locations: classpath:schema.sql
+      schema-locations: classpath:/db/changelog/schema.sql
 
 logging:
   level:
