feature(cb-0046): extend Flowcase integration with scheduled syncing and test setup
- Add `FlowcaseSyncService` to fetch and process user CV data on scheduled intervals
- Update DTOs and HTTP client to support new use cases
- Configure WireMock for integration testing
- Add comprehensive integration and manual tests for sync scenarios

--- a/src/test/resources/application-test.yaml
+++ b/src/test/resources/application-test.yaml
@@ -25,10 +25,13 @@ spring:
           order_inserts: true
           order_updates: true
     open-in-view: false
+  task:
+    scheduling:
+      enabled: false
 
 flowcase:
-  apiKey: ${FLOWCASE_API_KEY}
-  baseUrl: ${FLOWCASE_BASE_URL}
+  base-url: http://localhost:${wiremock.server.port}
+  api_key: "test-api-key"
 openai:
   apiKey: ${OPENAI_API_KEY}
   model: gpt-4
