feature(cb-0055): implement CV embedding feature with Google Gemini and pgvector integration
- Create `CvEmbeddingService` for generating, storing, and managing CV embeddings.
- Add `CvEmbeddingRepository` with pgvector support for efficient storage and queries.
- Implement `GoogleGeminiEmbeddingProvider` for embedding generation via Google's Generative AI API.
- Introduce `CvEmbeddingScheduler` for periodic processing of missing embeddings.
- Define endpoints in `EmbeddingController` to trigger embedding operations manually and for specific users.
- Add Liquibase changeset for `cv_embedding` table and pgvector extension setup.
- Include integration tests using Testcontainers for pgvector database operations.

Signed-off-by: Thomas Andersen <thomas.andersen77@gmail.com>

--- a/docker-compose-local.yaml
+++ b/docker-compose-local.yaml
@@ -2,7 +2,7 @@ version: '3.8'
 
 services:
   postgres-local:
-    image: postgres:15-alpine
+    image: pgvector/pgvector:pg15
     container_name: cloudberries-postgres-local
     restart: unless-stopped
     environment:
