--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -19,6 +19,11 @@ openai:
 gemini:
     apiKey: ${GEMINI_API_KEY}
     model: gemini-1.5-pro-latest
+embedding:
+  enabled: false
+  provider: GEMINI
+  model: text-embedding-004
+  dimension: 768
 
 management:
   endpoints:
