--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,8 @@
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
         <javacv.version>1.5.10</javacv.version>
+        <!-- Skip ITs by default; enable with -DskipITs=false -->
+        <skipITs>true</skipITs>
     </properties>
 
     <dependencyManagement>
@@ -261,6 +263,27 @@
             <version>5.10.0</version> <!-- Or latest -->
             <scope>test</scope>
         </dependency>
+
+        <!-- Testcontainers for DB integration tests against pgvector -->
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>testcontainers</artifactId>
+            <version>1.19.8</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>1.19.8</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>1.19.8</version>
+            <scope>test</scope>
+        </dependency>
+
         <!-- Zonky Embedded Postgres -->
         <dependency>
             <groupId>io.zonky.test</groupId>
@@ -375,8 +398,19 @@
                     <includes>
                         <include>**/*IntegrationTest.java</include>
                         <include>**/*IntegrationTest.kt</include>
+                        <include>**/*IT.java</include>
+                        <include>**/*IT.kt</include>
                     </includes>
+                    <skipITs>${skipITs}</skipITs>
                 </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>integration-test</goal>
+                            <goal>verify</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
