feature(cb-0060): upgrade Gemini model to v2.5 and implement consultant search functionalities
- Replace Gemini model from `1.5-pro-latest` to `2.5-pro` across the application and workflows.
- Update embedding configurations and disable embedding processing by default.
- Introduce `ConsultantSearchService` for relational and semantic consultant searches.
- Add `ConsultantSearchController` with endpoints to handle search operations.
- Enhance consultant entities and repositories for advanced querying and search performance.
- Add database indexes for `consultant_skills` and `cv_embedding` tables to optimize search.
- Schedule embedding job to run daily at 23:00.
- Update logging levels to improve runtime clarity.

Signed-off-by: Thomas Andersen <thomas.andersen77@gmail.com>

--- a/src/main/resources/application-local.yaml
+++ b/src/main/resources/application-local.yaml
@@ -7,9 +7,9 @@ openai:
   assistantId: ${OPENAI_ASSISTANT_ID}
 gemini:
   apiKey: ${GEMINI_API_KEY}
-  model: gemini-1.5-pro-latest
+  model: gemini-2.5-pro
 embedding:
-  enabled: true
+  enabled: false
   provider: GEMINI
   model: text-embedding-004
   dimension: 768
@@ -48,4 +48,4 @@ spring:
 
 logging:
   level:
-    no.cloudberries.candidatematch: DEBUG # Setter DEBUG-logging for din kode
+    no.cloudberries.candidatematch: INFO # Setter DEBUG-logging for din kode
