--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -18,7 +18,7 @@ openai:
   assistantId: ${OPENAI_ASSISTANT_ID}
 gemini:
     apiKey: ${GEMINI_API_KEY}
-    model: gemini-1.5-pro-latest
+    model: gemini-2.5-pro
 embedding:
   enabled: false
   provider: GEMINI
